RESOLVED FIXED279390
[WASM] Fix the assertion in ExternRefTable and rename it to ExternOrAnyRefTable
https://bugs.webkit.org/show_bug.cgi?id=279390
Summary [WASM] Fix the assertion in ExternRefTable and rename it to ExternOrAnyRefTable
Yijia Huang
Reported 2024-09-09 15:59:53 PDT
Attachments
Yijia Huang
Comment 1 2024-09-09 16:08:17 PDT
EWS
Comment 2 2024-09-09 16:31:35 PDT
Committed 283369@main (946ddabf2e45): <https://commits.webkit.org/283369@main> Reviewed commits have been landed. Closing PR #33343 and removing active labels.
WebKit Commit Bot
Comment 3 2024-09-09 17:52:34 PDT
Re-opened since this is blocked by bug 279402
Yijia Huang
Comment 4 2024-09-10 00:59:20 PDT
EWS
Comment 5 2024-09-11 00:55:19 PDT
Committed 283472@main (aea780d518de): <https://commits.webkit.org/283472@main> Reviewed commits have been landed. Closing PR #33381 and removing active labels.
EWS
Comment 6 2024-09-16 19:10:48 PDT
Committed 283286.47@safari-7620-branch (be63af830e0c): <https://commits.webkit.org/283286.47@safari-7620-branch> Reviewed commits have been landed. Closing PR #1736 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.